switch db ids to UUID

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,6 +53,7 @@ spring:
       username: turkeyuser
       password: turkeypassword
       database: turkeydb
+      uuid-representation: standard
 
 ---
 spring:
