--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -30,6 +30,11 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${turkey.authscheme}://${turkey.authhost}:${turkey.authport}/auth/realms/${turkey.realm}
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
 
 ---
 spring:
