--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Spring microservice for sincronizing Time-Turkey clients</description>
 	<properties>
 		<java.version>17</java.version>
+		<h2.version>1.4.200</h2.version>
 	</properties>
 	<dependencies>
 		<dependency>
